<resources>
    <string name="app_name">Tello Controller</string>

    <string name="btn_takeoff">이륙</string>
    <string name="btn_land">착륙</string>
    <string name="btn_emergency">비상 정지</string>
    <string name="btn_speedsave">속도 수정</string>
    <string name="btn_up">상승/하강 모드</string>
    <string name="btn_move">전진 모드</string>
    <string name="btn_stop">정지(촬영) 모드</string>
    <string name="btn_stop_unlock">정지(촬영) 모드 해제</string>
    <string name="btn_capture">촬영하기</string>
    <string name="btn_forcestop">정지</string>

    <string name="et_distance">이동 거리 (20cm–500cm)</string>
    <string name="et_speed">이동 속도 (10cm-100cm)</string>
    <string name="toast_distance_error">이동 거리를 입력해주세요</string>
    <string name="angle">%1$s : %2$s</string>

    <string name="toast_saved">저장되었습니다.</string>

    <string name="error">에러가 발생했습니다.</string>

</resources>